# SST-decoding

./: .gitignore  README.md  SST_binlister_v3.txt  SST_trigger_codes.txt  pyproject.toml
docs/: reproducing_paper.md
pipeline/: interpretability_helpers.py  misc.py  perf.py  run_versioning.py  types.py
pipeline/data/: splits.py  standardize.py  utils.py
pipeline/eval/: metrics.py  plot.py
pipeline/interpretability/: attribution.py  explainers.py  plot.py
pipeline/models/: cnn_transformer.py  pure_cnn.py  spatio_temporal_cnn.py  transformer_only.py  utils.py
pipeline/train/: augmentations.py  checkpoint.py  driver.py  loss.py
sst_campaign/: README.md  analyze_attention.py  explainer.py  interp.py  run_campaign.py  run_causal_go_stop_cycle.py  run_manuscript_pipeline.py
sst_campaign/configs/: full_matrix_parallel.toml  manuscript.toml  smoke.toml
sst_campaign/experiments/: README.md  common.py  train_repro_baseline.py  train_zero_shot_loso.py  training_fold_loaders.py  training_results.py
sst_campaign/utils/: behavioral_sst.py  causal_ablation.py  causal_reporting.py  common.py  config.py  manuscript_stats.py  model_loading.py  model_specs.py  run_tasks.py  saved_run_context.py  stop_windows.py
